# Saori

./: .gitignore  .gitmodules  CMakeLists.txt
config/: CMakeLists.txt  athena.cfg.in  plugins.cfg.in  resources.cfg.in
dependencies/: CMakeLists.txt
dependencies/Apple/: ImageAndTextCell.mm
dependencies/JUInspectorView/: JUInspectorView.h  JUInspectorViewHeader.h
include/: Context.h  MeshViewerState.h  SaoriAppDelegate.h
include/controls/: InteractiveOgreView.h  Panel.h  ResourcesPanel.h  SceneExplorerPanel.h  ToolPanel.h  View3D.h
resources/: Application.xib  Info.plist  ResourcesPanel.xib  SceneExplorerPanel.xib  View3D.xib
resources/Saori.xcodeproj/: project.pbxproj
resources/Saori.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: CMakeLists.txt  Context.mm  MeshViewerState.cpp  MeshViewerState.mm  SaoriAppDelegate.mm
src/controls/: InteractiveOgreView.mm  Panel.mm  ResourcesPanel.mm  SceneExplorerPanel.mm  ToolPanel.mm  View3D.mm
